# aiogramBot

./: .env.exaple  README.md  bot.py  pyproject.toml
config_data/: config.py
different/: BotGuessNum.py  BotWithRequests.py  FiltersBot.py  MyBot.py  keyboards.py
handlers/: other_handlers.py  user_handlers.py
keyboards/: keyboards.py  set_menu.py
lexicon/: lexicon_ru.py
